[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cog"
dynamic = ["version"]
description = "Cog SDK: Define machine learning models with standard Python"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Replicate", email = "team@replicate.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typing_extensions>=4.0",
    "pyyaml>=6.0",
    # Server deps (temporary until Rust FFI)
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "starlette",
    "structlog>=21.0.0",
    "httpx>=0.21.0",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/replicate/cog"
Documentation = "https://cog.run"
Repository = "https://github.com/replicate/cog"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
exclude = ["tests*"]

[tool.setuptools_scm]
root = ".."
version_file = "python/cog/_version.py"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]
