[workspace]
resolver = "2"
members = ["coglet", "coglet-python"]

[workspace.package]
version = "0.18.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/replicate/cog"
homepage = "https://cog.run"
documentation = "https://cog.run/docs"
keywords = ["machine-learning", "inference", "containers", "prediction"]
categories = ["development-tools", "web-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# HTTP server
axum = "0.8"

# HTTP client
# Use rustls-no-provider to avoid pulling in aws-lc-sys (which needs cmake).
# The ring crypto provider is supplied via the explicit rustls dependency below.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sentry = { version = "0.47", default-features = false, features = ["backtrace", "contexts", "panic", "tracing", "reqwest"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Python bindings
pyo3 = { version = "0.27", features = ["abi3-py310"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
pyo3-stub-gen = "0.20"

# Testing
insta = { version = "1", features = ["json"] }
