[project]
name = "cog"
requires-python = ">=3.6.0"
dynamic = ['version', 'description']

[tool.poetry]
name = "cog"
version = "0.0.1"
description = "Containers for machine learning"
authors = [
    "Replicate Team <team@replicate.com>",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
