[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "cog"
description = "Containers for machine learning"
readme = "README.md"
authors = [
  {name = "Replicate", email = "team@replicate.com"}
]
license.file = "LICENSE"
urls."Source" = "https://github.com/replicate/cog"

requires-python = ">=3.6"

dynamic = ["version"]

[tool.setuptools_scm]
root = ".."
write_to = "python/cog/_version.py"

[tool.black]
exclude = '(\.eggs|\.git|\.hg|\.mypy|_cache|\.nox|\.tox|\.venv|\.svn|_build|buck-out|build|dist|_vendor)'

[tool.vendoring]
destination = "cog/_vendor/"
requirements = "cog/_vendor/vendor.txt"
namespace = "cog._vendor"

protected-files = ["__init__.py", "README.rst", "vendor.txt"]
patches-dir = "tools/vendoring/patches"

[tool.vendoring.transformations]
substitute = []
drop = [
  # pyyaml falls back to plain python
  "_yaml.*.so",

  # sniffio ships with tests
  "sniffio/_tests",

  # responses ships with tests
  "responses/tests",

  # h11 ships with tests
  "h11/tests",

  # pydantic hypothesis plugin, fall back to python
  "pydantic/_hypothesis_plugin.*.so",
]

[tool.vendoring.typing-stubs]

[tool.vendoring.license.directories]

[tool.vendoring.license.fallback-urls]
