[package]
name = "coglet-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes = "1.11"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true
