[package]
name = "coglet-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-util.workspace = true

[dev-dependencies]
insta.workspace = true
