[package]
name = "coglet-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

# Webhook HTTP clients
reqwest.workspace = true
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
insta.workspace = true
wiremock = "0.6"
