[package]
name = "coglet-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
coglet-core.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
coglet-bridge.workspace = true
insta.workspace = true
tokio-util.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
