[package]
name = "coglet-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
bytes = "1.11"
futures = "0.3.31"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }

[dev-dependencies]
insta.workspace = true
